--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@
                 />
                 <div class="mt-2 text-right">
                     <a
-                            href="/forgot.html"
+                            href="#"
                             class="text-gray-600 hover:text-utdOrange text-sm underline underline-offset-2 transition-colors"
                     >Forgot Password?
                     </a>
