--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,7 @@
 <nav class="bg-white shadow-gray-200 shadow-sm px-6 py-4">
     <div class="flex justify-between items-center mx-auto max-w-6xl">
-        <a class="font-bold text-lg" href="#"
+        <a class="font-bold text-lg"
+           href="{% if session["user_id"] %} {{ url_for("dashboard") }} {% else %} # {% endif %}"
         ><span class="text-utdOrange">UTD</span>Link</a
         >
         {% if session["user_id"] %}
