moved navbar and footer to the partials folder and added the profile page to show the user's deatils

--- a/templates/addOpportunity.html
+++ b/templates/addOpportunity.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <!-- navbar -->
-    {% include "navbar.html" %}
+    {% include "partials/navbar.html" %}
 
     <!-- main content -->
     <main class="flex-grow self-center mt-10 mb-12 px-5 w-full max-w-6xl">
@@ -83,5 +83,5 @@
     </main>
 
     <!-- footer -->
-    {% include "footer.html" %}
+    {% include "partials/footer.html" %}
 {% endblock content %}
