--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,7 +49,7 @@
     </script>
 
     <!-- navbar -->
-    {% include "navbar.html" %}
+    {% include "partials/navbar.html" %}
 
     <!-- main content -->
     <main class="flex-grow self-center mt-10 mb-12 px-5 w-full max-w-6xl">
@@ -132,5 +132,5 @@
     </main>
 
     <!-- footer -->
-    {% include "footer.html" %}
+    {% include "partials/footer.html" %}
 {% endblock content %}
