--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="flex flex-col min-h-screen">
         <!-- navbar -->
-        {% include "navbar.html" %}
+        {% include "partials/navbar.html" %}
 
         <div class="flex-grow self-center mx-20 md:mx-10 lg:mx-0 mt-16 max-w-5xl">
             <!-- hero section -->
@@ -61,6 +61,6 @@
         </div>
 
         <!-- footer -->
-        {% include "footer.html" %}
+        {% include "partials/footer.html" %}
     </div>
 {% endblock content %}
