--- a/templates/opportunityDetails.html
+++ b/templates/opportunityDetails.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+
+{% block content %}
     <!-- navbar -->
     {% include "partials/navbar.html" %}
 
@@ -15,7 +17,7 @@
                     />
                 </div>
 
-                <!-- right side content -->
+                <!-- bottom content -->
                 <div class="flex flex-col justify-between flex-1 space-y-6">
                     <!-- title -->
                     <h1 class="text-4xl font-bold">{{ opp_details.title }}</h1>
@@ -61,9 +63,10 @@
                 </div>
             </div>
         {% else %}
-            <h3 class="font-lg text-gray-700 mt-10">This opportunity does not exists</h3>
+            <h3 class="font-lg text-gray-700 mt-10">This opportunity does not exist</h3>
         {% endif %}
     </main>
 
     <!-- footer -->
-    {% include "partials/footer.html" %} {% endblock content %}
+    {% include "partials/footer.html" %}
+{% endblock content %}
