--- a/templates/profile.html
+++ b/templates/profile.html
@@ -75,7 +75,7 @@
             <ul class="flex flex-wrap -mb-px text-sm font-medium text-center text-body">
                 <!-- signups tab -->
                 <li class="me-2">
-                    <a hx-get="{{ url_for("profile_signups") }}"
+                    <a hx-get="{{ url_for("profile_signups") }}" hx-trigger="click"
                        hx-target="#tab-content"
                        hx-swap="innerHTML"
                        class="tab-btn flex items-center gap-2 text-gray-700 inline-flex items-center justify-center p-4 border-b border-transparent rounded-t-base hover:cursor-pointer"
